Correct alignment of time markers.

--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ a:hover {
 .newday th {
 	padding-left: 3px;
 	font-weight: bold;
+	text-align: left;
 	color: white;
 	height: 17px;
 	background-color: #6d96a9;
